# plant-overview

./: README.md  ex.ipynb  pyproject.toml
data/: arquivo.csv  arquivo_01.csv
src/: app.py  app3.py  app_2.py  data_loader.py  main.py  visualizations.py
src/charts/: bar_chart.py  chart_area.py  grouped_bar_chart.py  line_chart.py  new.py  safe_heatmap_chart.py
src/components/: card_animated.py  card_info.py  card_info_2.py  charts.py  custom_card.py  custom_card_2.py
src/config/: constants.py  styles.py
src/modules/home/: charts.py  components.py  home_view.py  metrics.py  visualization.py
src/utils/: helpers.py  load_data.py  router.py
src/views/: home_view.py  month.py
temp/: charts.py  home.py
tests/: tests.py
