[tool.poetry]
name = "plant-overview"
version = "0.1.0"
description = ""
authors = ["Wilkne Maia <72803395+wilkneMaia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.44.0"
plotly = "^6.0.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.11.2"
isort = "^6.0.1"
freezegun = "^1.5.1"
black = "^25.1.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
# lint
lint = 'ruff . && black --check . --diff && isort --check . --diff'
format = 'autoflake --remove-all-unused-imports --recursive --in-place . && black --line-length 80 . && isort --line-length 80 .'
# tests
pre_tests = 'task lint'
tests_dev = 'ENVIRONMENT=development pytest -s -x -vv'
tests = 'pytest -s -x --cov=app -vv'
# run
run = 'streamlit run main.py'
# python
py_local = "source .venv/bin/activate"
