[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "plant-overview"
version = "0.1.0"
description = ""
authors = ["Wilkne Maia <72803395+wilkneMaia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.44.0"
plotly = "^6.0.1"
helper-utils = "^0.0.8"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
# Ferramentas de qualidade de código
ruff = "^0.11.2"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
pylint = "^3.3.6"
mypy = "^1.15.0"

# Testes
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
freezegun = "^1.5.1"
pytest-mock = "^3.14.0"

# Desenvolvimento
ipykernel = "^6.29.5"
jupyterlab = "^4.3.6"
taskipy = "^1.14.1"
streamlit-autorefresh = "^1.0.1"


[tool.poetry.group.ci.dependencies]
types-pyyaml = "^6.0.12.20250326"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "migrations", "__pycache__"]

# Configurações de linting
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # pylint
    "PT",  # pytest-style
    "PTH", # pathlib
    "RUF", # ruff-specific
]
ignore = [
    "PTH118",
    "RUF013",
    "PLR0913",
    "PLR2004",
    "PLR0917",
    "PTH123",
    "PTH100",
    "PLR6301",
    "PTH120",
    "E501",
    "PLC0415",
    "E722",
    "F841",
]
preview = true # Ativa recursos em preview

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true

[tool.black]
line-length = 88
target-version = ["py311"]
preview = true

[tool.isort]
profile = "black"
known_first_party = ["plant_overview"]
line_length = 88
force_sort_within_sections = true

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings --cov=src --cov-report term-missing"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.taskipy.tasks]
# --- Análise de Código ---
lint = """
    ruff check . &&
    black --check . &&
    isort --check . &&
    mypy --strict --show-error-codes src
"""

format = """
    # 1. Remove imports não utilizados
    autoflake --remove-all-unused-imports --remove-unused-variables --recursive --in-place src

    # 2. Organiza imports
    isort src

    # 3. Formatação padrão
    black src

    # 4. Correções automáticas do Ruff (com fallback)
    ruff check --fix --exit-zero src || echo "Ruff fix completed with warnings"
"""
audit = "safety check && bandit -r src"

# --- Testes ---
test = "pytest -x --cov=src --cov-report=term-missing"
test-ci = "pytest -x --cov=src --cov-report=xml"
test-watch = "ptw -- -x --cov=src"

# --- Streamlit ---
run = "streamlit run src/app.py"
run-dev = "ENV=dev streamlit run src/app.py"
run-prod = "ENV=prod streamlit run src/app.py"

# --- Utilitários ---
clean = """
    find . -type f -name '*.pyc' -delete &&
    find . -type d -name '__pycache__' -exec rm -rf {} + &&
    rm -rf .coverage .mypy_cache .pytest_cache
"""
docs = "pdoc src -o docs --force"
